tests/snapshots/examples_fixtures/type_system__failing__14_unhandled_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/14_unhandled_effect.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E403]: UNKNOWN EFFECT

Effect `Console` is not declared.

  --> examples/type_system/failing/14_unhandled_effect.flx:2:1
  |
2 | perform Console.print("hello")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ unknown effect in perform

Hint:
  Declare the effect before using `perform`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Console).

  --> examples/type_system/failing/14_unhandled_effect.flx:2:1
  |
2 | perform Console.print("hello")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/failing/14_unhandled_effect.flx:2:1
  |
2 | perform Console.print("hello")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
